<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_16">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/margin_120"
        android:layout_height="@dimen/margin_120"
        android:src="@drawable/ic_avatar"
        app:civ_border_width="@dimen/margin_2"
        app:civ_border_color="@color/black"
        android:layout_marginTop="@dimen/margin_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:lines="1"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/text_size_21"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:lines="1"
        android:layout_marginTop="@dimen/margin_7"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/text_size_17"
        android:textColor="@color/gray600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/gray400"
        app:layout_constraintTop_toBottomOf="@id/profile_phone_number"/>

    <LinearLayout
        android:id="@+id/container_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_50"
        android:padding="@dimen/margin_10"
        android:background="@drawable/custom_background_item_profile"
        app:layout_constraintTop_toBottomOf="@id/line">

        <ImageView
            android:layout_width="@dimen/margin_36"
            android:layout_height="@dimen/margin_36"
            android:src="@drawable/ic_change_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_20"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/margin_10"
        android:background="@drawable/custom_background_item_profile"
        app:layout_constraintTop_toBottomOf="@id/container_change_password">

        <ImageView
            android:layout_width="@dimen/margin_36"
            android:layout_height="@dimen/margin_36"
            android:src="@drawable/ic_help"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_20"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/margin_10"
        android:background="@drawable/custom_background_item_profile"
        app:layout_constraintTop_toBottomOf="@id/container_help">

        <ImageView
            android:layout_width="@dimen/margin_36"
            android:layout_height="@dimen/margin_36"
            android:src="@drawable/ic_privacy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_20"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/margin_10"
        android:background="@drawable/custom_background_item_profile"
        app:layout_constraintTop_toBottomOf="@id/container_privacy">

        <ImageView
            android:layout_width="@dimen/margin_36"
            android:layout_height="@dimen/margin_36"
            android:src="@drawable/ic_logout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_20"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>